--- a/src/modules/Contacts.module.css
+++ b/src/modules/Contacts.module.css
@@ -10,3 +10,44 @@
 .container ul {
   width: calc(100% - 100px);
 }
+
+h3 {
+  text-align: center;
+  font-size: 4rem;
+  color: var(--button);
+  text-decoration: underline;
+}
+
+.select {
+  display: flex;
+  gap: 30px;
+  font-size: 1.3rem;
+  justify-content: center;
+  justify-self: center;
+  align-items: center;
+  box-shadow: 1px 1px 25px var(--card-shadow);
+  border-radius: 10px;
+  height: 100px;
+  width: 300px;
+  margin: 40px;
+}
+
+.select label {
+  display: flex;
+  cursor: pointer;
+}
+
+.select input {margin-right: 10px;}
+
+.select button {
+  color: var(--delete);
+  border: none;
+  background: none;
+  font-size: 2.5rem;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.select button:hover {
+  transform: scale(1.3);
+}
